--- a/30-Day-Challenge/06 - Search Places/style.css
+++ b/30-Day-Challenge/06 - Search Places/style.css
@@ -80,3 +80,7 @@ span.population {
 .hl {
   background:#ffc600;
 }
+.suggestions li.alert {
+  background: none;
+  background-color: ffffff5c!important ;
+}
