--- a/projects/math-app/_src/scss/style.scss
+++ b/projects/math-app/_src/scss/style.scss
@@ -475,6 +475,7 @@ body {
   width: 300px;
   left: 500px;
   top: 300px;
+  // display: block!important;
   /* transform: rotate(45deg); */
   
   .borderlr,
