mousemove and mousedown working awesome now!

--- a/projects/math-app/_src/scss/style.scss
+++ b/projects/math-app/_src/scss/style.scss
@@ -861,6 +861,9 @@ body {
       transform: translateX(-50%) rotateY(180deg);
     }
   }
+  &.pe-none {
+    pointer-events: none;
+  }
 }
 [data-panel=protractor] {
   background: lightyellow;
