--- a/projects/math-app/_src/scss/style.scss
+++ b/projects/math-app/_src/scss/style.scss
@@ -386,6 +386,7 @@ body {
   }
 
   &.draggable-set {
+    border: 1px solid rgba(0,0,0,0);
     .btn {
       display: none;
       position: absolute;
@@ -934,17 +935,16 @@ body {
 }
 
 [data-panel=abacus] {
-  div.drag-area {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(202, 202, 202);
-    z-index: -1;
-  }
-
   g {
     cursor: pointer;
+  }
+
+  .bead {
+    // &[data-layer=up] {
+    //   fill: red;
+    //   [data-position=1] {
+    //     transform: translateY('-20');
+    //   }
+    // }
   }
 }
