Abacus: One new function is, a piece color will be blue (active) if it's in use.

--- a/projects/math-app/_src/scss/style.scss
+++ b/projects/math-app/_src/scss/style.scss
@@ -972,11 +972,10 @@ body {
   }
 
   .bead {
-    // &[data-layer=up] {
-    //   fill: red;
-    //   [data-position=1] {
-    //     transform: translateY('-20');
-    //   }
-    // }
+    &[data-state=up] {
+      path {
+        fill: #b1d8ed;
+      }
+    }
   }
 }
